# RJW-IDD-Starter

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  COMMIT-READY.md  CONTRIBUTING.md  DECISION_LOG.md  DELIVERY-PACKAGE.md  FILES-CREATED.txt  FINAL-STATUS.md  GAP-ANALYSIS-FINDINGS.md  GAP-REMEDIATION-SUMMARY.md  GAPS-ADDRESSED.md  IMPLEMENTATION-SUMMARY.md  LICENSE  NOTICE  PROJECT-STATUS.md  PROMPT-LIBRARY-QUICK-ACCESS.md  README.md  RELEASE.md  RJW-IDD-MASTER-INDEX.md  SECURITY.md  TEST-LOG.md  bootstrap-bonus-90min.sh  doc-sync-summary.txt  project-prompts.md  prompt-pack.json  pyproject.toml  quickstart.md  requirements-dev.txt  requirements-frozen.txt  requirements.txt  update-manifest.json
rjw-idd-starter-kit/: .gitignore  MANIFEST.in  README.md  docker-compose.yml  install.ps1  install.sh  prompt-pack.json  pyproject.toml  requirements-frozen.txt
rjw-idd-starter-kit/artifacts/ledgers/: test-ledger.csv
rjw-idd-starter-kit/artifacts/method-history/: README.md
rjw-idd-starter-kit/docs/: change-log.md  game-setup.md  i18n-guide.md  living-docs-reconciliation.md  migrate-to-this-version.md  quickstart.md  troubleshooting.md
rjw-idd-starter-kit/docs/demos/: guard-fail.md  init-session.md  prompts-version.md
rjw-idd-starter-kit/docs/prompts/: EXAMPLE-CONVERSATIONS.md  GLOSSARY.md  PROMPT-0002-implementation-coach.md  PROMPT-0003-spec-translator.md  PROMPT-0004-test-navigator.md  PROMPT-0006-governance-audit.md  PROMPT-0007-change-log-author.md  README.md
rjw-idd-starter-kit/docs/runbooks/: DOC-0016-security-incident-runbook.md  DOC-0017-test-first-runbook.md  DOC-0020-deployment-runbook.md  DOC-0022-git-workflow-runbook.md  README.md  deployment-runbook.md  finance-variance-runbook.md  general-incident-runbook.md  git-workflow-runbook.md  test-first-runbook.md
rjw-idd-starter-kit/docs/standards/: DOC-0001-tot-capture-standard.md  DOC-0006-living-docs-guideline.md  DOC-0013-naming-conventions.md  git-setup-configuration.md  living-docs-guideline.md  naming-conventions.md  tot-capture-standard.md  traceability-schema.md
rjw-idd-starter-kit/examples/: ok.json
rjw-idd-starter-kit/logs/: README.md
rjw-idd-starter-kit/logs/ci/: LOG-TEMPLATE.md  README.md
rjw-idd-starter-kit/logs/cost/: README.md
rjw-idd-starter-kit/logs/rdd-harvest/: LOG-TEMPLATE.md  README.md
rjw-idd-starter-kit/logs/security/: README.md
rjw-idd-starter-kit/prompts/: DYNAMIC_PROMPTS.md
rjw-idd-starter-kit/research/: evidence_tasks.json
rjw-idd-starter-kit/scripts/: config_enforce.py  doc_sync.py  promote_evidence.py  validate_ids.py
rjw-idd-starter-kit/scripts/addons/: README.md  __init__.py  set_3d_profile.py  set_video_ai_profile.py
rjw-idd-starter-kit/specs/: README.md  SPEC-0201-quality-gates.md  SPEC-0401-observability-telemetry.md  SPEC-0602-cost-governance.md  SPEC-0701-deployment-operations.md  SPEC-0801-slo-sli-framework.md  SPEC-1001-data-governance.md
rjw-idd-starter-kit/templates/: README.md  pyproject.toml.template  requirements.txt.template  setup_project_env.sh
rjw-idd-starter-kit/tests/: test_safety_gate.py  test_sync_prompts.py
rjw-idd-starter-kit/tools/: README.md  backup_manager.py  dummy_telemetry.py  health_check.py  logging_config.py  performance_monitor.py
rjw-idd-starter-kit/tutorials/: slot-car-15-minute-win.md  slot-car-30-minute-win.md  slot-car-60-minute-win.md
rjw-idd-starter-kit/videos/: README.md
(+459 files in other folders)
